# pelu

./: .dockerignore  .gitignore  Dockerfile  lighthouserc.desktop.json  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/db/migrations/: 001_schema.sql  002_seed.sql  003_barber_email.sql  004_conversation_states.sql  005_barber_email_history.sql  006_perf_indexes.sql  007_site_context.sql  008_agent_reliability.sql  009_team_media_paths.sql  010_telegram_booking_channel.sql  011_installation_bootstrap.sql  012_shop_commerce.sql  013_payments.sql  014_appointment_payment_guard.sql
backend/evals/: README.md  agent_golden_cases.jsonl
backend/scripts/: bootstrap_installation.py  qa_agent_e2e.py
backend/src/: config.py  observability.py  webhook_signer.py
backend/src/agent/: events.py  graph.py  guardrails.py  state.py  system_prompt.py
backend/src/api/: client_ip.py  deps.py  main.py  payment_schemas.py  schemas.py  shop_schemas.py
backend/src/db/: pool.py
backend/src/integrations/: chatwoot.py  redis_client.py
backend/src/jobs/: followups.py  (+1 more)
backend/tests/: test_agent_context.py  test_agent_delivery_integration.py  test_agent_eval_dataset.py  test_agent_reliability.py  test_installation_bootstrap.py  test_payment_api.py  test_payment_config.py  test_payment_providers.py  test_payment_security.py  test_payments_integration.py  test_performance_catalog.py  test_rabbitmq_integration.py  test_security.py  test_shop_commerce.py  test_web_vitals.py
(+181 files in other folders)
