[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nox-backend"
version = "0.1.0"
description = "Backend + agente WhatsApp de NOX Barber (FastAPI + LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "email-validator>=2.0",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "redis>=5.2",
    "aio-pika>=9.4",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.13",
    "psycopg[binary]>=3.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.10",
    "langfuse>=3.0.0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pip-audit>=2.9",
    "pip-tools>=7.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires disposable external services"]
